src/styles/Checkout.css
.summary {
  font-size: 32px;
  text-decoration: underline;
  margin-bottom: 50px;
}

.summary-empty {
  font-size: 24px;
  color: #585858;
}

.checkout-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: #f4f4f4;
  height: 500px;
  width: 500px;
  margin: 0 auto;
  padding: 15px;
  overflow: auto;
  box-shadow: 5px 5px 45px 10px #777776;
}

.checkout-content-pizzas > .pizza-order-item {
  display: grid;
  grid-template-columns: 1fr auto;
  grid-template-rows: auto 1fr;
  margin-left: 5px;
  margin-right: 10px;
}

.checkout-content-pizzas > .pizza-order-item > p {
  grid-column: 1 / 2;
  grid-row: 1 / 2;
  align-self: center;
  justify-self: flex-start;
  text-decoration: underline;
}

.checkout-content-pizzas > .pizza-order-item div {
  grid-column: 1 / 3;
  grid-row: 2 / 3;
}

.checkout-content-pizzas > .pizza-order-item div > ul {
  list-style: none;
  padding: 0;
}

.checkout-content-pizzas > .pizza-order-item span {
  grid-column: 2 / 3;
  grid-row: 1 / 2;
  align-self: center;
  justify-self: flex-end;
}

.checkout-content-pizzas > .pizza-order-item span > button {
  padding: 5px;
  display: block;
  border: 1px solid #777777;
  background-color: #dedede;
  border-radius: 5px;
  font-family: "Montserrat Alternates", sans-serif;
  transition: color 0.3s, background-color 0.5s;
}

.checkout-content-pizzas > .pizza-order-item span > button:hover {
  cursor: pointer;
  color: #f4f4f4;
  background-color: #ec1f26;
}

.checkout-content-sauces > .sauce-order-item {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-left: 5px;
  margin-right: 10px;
}

.checkout-content-sauces > .sauce-order-item > p {
  text-decoration: underline;
}

.checkout-content-sauces > .sauce-order-item div {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
  width: 80px;
}

.checkout-content-sauces > .sauce-order-item div > span {
  display: flex;
  align-items: center;
}

.checkout-content-sauces > .sauce-order-item div > button {
  height: 20px;
  width: 20px;
  border: none;
  border-radius: 10px;
  background-color: #f5ad42;
}

.checkout-content-sauces > .sauce-order-item div > button:hover {
  cursor: pointer;
}

.checkout-sauces > p {
  font-size: 24px;
  color: #585858;
  margin-top: 80px;
  margin-bottom: 40px;
}

.checkout-sauces > .sauces-list {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-left: 250px;
  margin-right: 250px;
}

.checkout-sauces > .sauces-list .sauce {
    margin-bottom: 50px;
}

.checkout-page > .loader {
  margin: 60px;
}

.submit-order {
  height: 250px;
}

.submit-order > button {
  margin: 25px auto;
  padding: 10px;
  display: block;
  border: 1px solid #777777;
  background-color: #dedede;
  border-radius: 5px;
  font-family: "Montserrat Alternates", sans-serif;
  transition: background-color 0.5s;
}

.submit-order > button:hover {
  background-color: #78d14e;
  background-image: linear-gradient(
    to right,
    #ffffff00 0%,
    #ffffff00 40%,
    #ffffffb3 100%
  );
  background-repeat: no-repeat;
  background-size: 200% 100%;
  transition: background-size 1s, background-color 1s;
  cursor: pointer;
}

.submit-order > button:disabled:hover {
  background-color: #f38c90;
}

